--- a/src/components/weatherComponent.css
+++ b/src/components/weatherComponent.css
@@ -1,37 +1,45 @@
 .info-box{
     text-align: center;
     border: solid;
+    border-radius: 10px;
     margin-top: 2%;
     margin-left: 12%;
     margin-right: 12%;
+    padding: 2%;
+    background-color: #F6F2EC;
 }
 
 .locale-name{
     display: inline;
     padding-right: 16.6%;
+    color: #748398;
 }
 
 .locale-temp{
     display: inline;
     padding-right: 16.6%;
+    color: #748398;
 }
 
 .locale-feels-like{
     display: inline;
     padding-right: 16.6%;
+    color: #748398;
 }
 
 .locale-weather{
     display: inline;
     padding-right: 16.6%;
+    color: #748398;
 }
 
 .locale-wind-speed{
     display: inline;
     padding-right: 16.6%;
+    color: #748398;
 }
 
 .locale-time{
     display: inline;
-
+    color: #748398;
 }
